# py-criteria

./: .gitignore  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: publish.yml  release.yml  test.yml
complexheart/domain/: criteria.py
src/complexheart/domain/: criteria.py
tests/: test_unit_criteria.py
