[project]
name = "complex-heart-criteria"
version = "0.1.0"
description = "Small implementation of a filter criteria pattern in Python for Complex Heart SDK. Compose several filters using fluent interface."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Unay Santisteban", email = "usantisteban@othercode.es" }
]
keywords = [
    "specification-pattern",
    "criteria",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/ComplexHeart/py-criteria"
Repository = "https://github.com/ComplexHeart/py-criteria.git"
Issues = "https://github.com/ComplexHeart/py-criteria/issues"

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4
exclude = [
    ".eggs",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "--cov=complexheart --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["src/complexheart"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: no branch",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
